# walkthrough

./: .clangd  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs
ada-cli/: Cargo.toml  build.rs
ada-cli/src/: capture.rs  capture_daemon.rs  doctor.rs  main.rs  query.rs
ada-cli/src/query/: bundle.rs  events.rs  output.rs  parser.rs  session.rs
ada-cli/tests/fixtures/: test-target.c
ada-cli/tests/integration/: common.sh  run_all.sh  test_crash_sigsegv.sh  test_ctrl_c.sh  test_kill_sigkill.sh  test_kill_sigterm.sh  test_normal_exit.sh  test_stop_command.sh
mcp_server/: Cargo.toml  pyproject.toml
mcp_server/src/: interfaces.py  lib.rs
query_engine/: Cargo.toml  pyproject.toml
query_engine/query_engine/: __init__.py
query_engine/src/: app.rs  interfaces.py  lib.rs
query_engine/src/atf/: error.rs  mod.rs
query_engine/src/atf/v2/: __init__.py  detail.py  detail.rs  error.rs  index.py  index.rs  mod.rs  session.py  session.rs  thread.py  thread.rs  types.py  types.rs
query_engine/src/handlers/: trace_info.rs
query_engine/tests/: query_engine_binary_integration_tests.rs  query_engine_binary_main_coverage_tests.rs  query_engine_binary_shutdown_tests.rs  test_atf_v2_integration.rs  test_interfaces.py  test_query_engine.py  trace_info_integration.rs
query_engine/tests/unit/: test_atf_reader_covfill_unit.py
third_parties/: CMakeLists.txt  Cargo.toml  README.md  build.rs
third_parties/frida-core/: frida-core-example.c  frida-core.h
third_parties/frida-gum/: frida-gum-example.c  frida-gum.h
third_parties/src/: lib.rs
tracer/: Cargo.toml
tracer/src/: lib.rs  main.rs
tracer_backend/: CMakeLists.txt  Cargo.toml  README.md  ada_paths.h.in  build.rs
tracer_backend/examples/advanced/: memory_debug  memory_debug.c  signal_trace  signal_trace.c
tracer_backend/examples/basic/: hello_trace  hello_trace.c
tracer_backend/include/: frida_controller.h  ring_buffer.h  shared_memory.h  thread_registry.h  tracer_types.h
tracer_backend/include/tracer_backend/: cli_parser.h  tracer_backend.h
tracer_backend/include/tracer_backend/ada/: thread.h
tracer_backend/include/tracer_backend/agent/: comprehensive_hooks.h  dso_management.h  exclude_list.h  hook_registry.h
tracer_backend/include/tracer_backend/atf/: atf_v4_writer.h
tracer_backend/include/tracer_backend/controller/: cli_usage.h  shutdown.h
tracer_backend/include/tracer_backend/docs/: common.h  doc_builder.h  example_runner.h  platform_check.h  troubleshoot.h
tracer_backend/include/tracer_backend/drain_thread/: drain_thread.h
tracer_backend/include/tracer_backend/interfaces/: thread_registry_interface.h
tracer_backend/include/tracer_backend/selective_persistence/: detail_lane_control.h  marking_policy.h  metrics.h  persistence_window.h
tracer_backend/include/tracer_backend/timer/: timer.h
tracer_backend/include/tracer_backend/utils/: agent_mode.h  control_block_ipc.h  ring_buffer.h  ring_pool.h  spsc_queue.h  thread_pools.h  thread_registry.h  tracer_types.h
tracer_backend/src/: frida_agent.c  frida_controller.c  lib.rs  main.c  ring_buffer.c  shared_memory.c  thread_registry.c  tracer_c_api.cpp
tracer_backend/src/agent/: CMakeLists.txt  agent_internal.h  frida_agent.cpp
tracer_backend/src/atf/: CMakeLists.txt  atf_v4_writer.c  trace_schema.pb-c.c  trace_schema.pb-c.h
tracer_backend/src/cli_parser/: CMakeLists.txt  cli_parser.c
tracer_backend/src/controller/: CMakeLists.txt  cli_usage.c  frida_controller.cpp  frida_controller_internal.h  main.c  shutdown.c
tracer_backend/src/docs/: CMakeLists.txt  doc_builder.c  example_runner.c  platform_check.c  troubleshoot.c
tracer_backend/src/drain_thread/: CMakeLists.txt  drain_thread.c  drain_thread_private.h
tracer_backend/src/interfaces/: CMakeLists.txt  thread_registry_skeleton.c
tracer_backend/src/selective_persistence/: CMakeLists.txt  detail_lane_control.cpp  marking_policy.cpp  metrics.cpp  persistence_window.cpp
tracer_backend/src/timer/: CMakeLists.txt  timer.c  timer_private.h
tracer_backend/src/utils/: CMakeLists.txt  ada_thread.c  agent_mode.cpp  ring_buffer.cpp  ring_buffer_private.h  ring_pool.cpp  spsc_queue.cpp  thread_pools.cpp  thread_registry.cpp  thread_registry_private.h
tracer_backend/tests/: CMakeLists.txt  tests.rs
tracer_backend/tests/bench/registry/: CMakeLists.txt  test_registry_bench.cpp
tracer_backend/tests/fixtures/: test_cli.c  test_cli_modes.c  test_cli_modes.h  test_runloop.c
tracer_backend/tests/integration/: test_agent_loader.c  test_agent_loader.cpp  test_controller_full_lifecycle.c  test_controller_full_lifecycle.cpp  test_integration.c  test_integration.cpp  test_p0_fixes.c  test_thread_registry_integration.cpp
tracer_backend/tests/integration/agent/: CMakeLists.txt  test_agent_loader.cpp  test_agent_registry_modes.cpp
tracer_backend/tests/integration/atf_v4/: CMakeLists.txt  test_atf_v4_writer_integration.cpp
tracer_backend/tests/integration/controller/: CMakeLists.txt  test_controller_full_lifecycle.cpp  test_integration.cpp  test_registry_lifecycle.cpp
tracer_backend/tests/integration/docs/: CMakeLists.txt  test_docs_integration.cpp
tracer_backend/tests/integration/examples/: CMakeLists.txt  test_examples_integration.cpp
tracer_backend/tests/integration/selective_persistence/: CMakeLists.txt  test_selective_persistence_integration.cpp
tracer_backend/tests/integration/timer/: CMakeLists.txt  test_timer_integration.cpp
tracer_backend/tests/integration/utils/: test_thread_registry_integration.cpp
tracer_backend/tests/unit/: test_ring_buffer.c  test_ring_buffer_attach.c  test_shared_memory.c  test_spawn_method.c  test_spawn_method.cpp  test_thread_registry.cpp
tracer_backend/tests/unit/agent/: CMakeLists.txt  test_agent_coverage.cpp  test_agent_mode.cpp  test_agent_mode_tick_before_captures.cpp  test_agent_state_machine.cpp
tracer_backend/tests/unit/atf_v4/: CMakeLists.txt  atf_v4_writer_test_helpers.c  atf_v4_writer_test_helpers.h  test_atf_v4_writer.cpp
tracer_backend/tests/unit/cli_parser/: CMakeLists.txt  cli_parser_mode_tests.cpp  (+2 more)
(+388 files in other folders)
