[workspace]
members = [
    "tracer-backend",
    # Future components will be added here:
    # "tracer",
    # "query-engine",
    # "mcp_server",
]

# Use resolver 2 for better dependency resolution
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ADA Team"]
license = "MIT"
repository = "https://github.com/ada-project/ada"

[workspace.dependencies]
# Common dependencies used across multiple crates
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Build dependencies
cmake = "0.1"
cc = "1.0"
bindgen = "0.69"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true