[workspace]
members = [
    "tracer_backend",
    "third_parties",
    "query_engine",
    "utils/coverage_helper",
    "tracer",
    # Future components will be added here:
    # "mcp_server",
]

# Use resolver 2 for better dependency resolution
resolver = "2"

# Workspace-wide features
[workspace.metadata.coverage]
enabled = false

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["WeZZard"]
license = "MIT"
repository = "https://github.com/agentic-infra/ada"

[workspace.dependencies]
# Common dependencies used across multiple crates
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Build dependencies
cmake = "0.1"
cc = "1.0"
bindgen = "0.69"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true