[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "query_engine"
version = "0.1.0"
description = "Query engine for ADA"
authors = [
    {name = "WeZZard"},
]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
]

[tool.maturin]
features = ["python"]

[tool.pytest.ini_options]
addopts = "-q"

[tool.coverage.run]
source = ["query_engine"]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true
